--- a/cmd/sftpslurper/app/layouts/layout.html
+++ b/cmd/sftpslurper/app/layouts/layout.html
@@ -36,7 +36,7 @@
    </main>
 
    <footer id="page-footer">
-      <p>&copy; 2025 Adam Presley</p>
+      <p>&copy; 2025 Adam Presley. Version {{.Version}}</p>
    </footer>
 
    <script type="module" src="/static/js/spinner-middleware.js"></script>
