Squash merge delete-files into main

--- a/cmd/sftpslurper/app/layouts/layout.html
+++ b/cmd/sftpslurper/app/layouts/layout.html
@@ -9,7 +9,8 @@
    <title>{{template "title" .}} - SFTP Slurper</title>
    <link type="text/css" rel="stylesheet" media="screen" href="/static/css/pico.min.css" />
    <link type="text/css" rel="stylesheet" media="screen" href="/static/css/spinner.min.css" />
-   <!-- <link type="text/css" rel="stylesheet" media="screen" href="/static/css/dialog.min.css" /> -->
+   <link type="text/css" rel="stylesheet" media="screen" href="/static/css/confirm.min.css" />
+   <link type="text/css" rel="stylesheet" media="screen" href="/static/css/alert.min.css" />
    <link type="text/css" rel="stylesheet" media="screen" href="/static/css/styles.css" />
    {{stylesheetIncludes "Stylesheets" .}}
 
